syntax = "proto3";


option csharp_namespace = "CareerCloud.gRPC.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ApplicantJobApplicantion{
    rpc GetApplicantJobApplicantion(ApplicantJobApplicantionId) returns(ApplicantJobApplicantionReply);
    rpc AddApplicantJobApplicantion(ApplicantJobApplicantionRequest) returns(google.protobuf.Empty);
    rpc UpdateApplicantJobApplicantion(ApplicantJobApplicantionRequest) returns(google.protobuf.Empty);
    rpc DeleteApplicantJobApplicantion(ApplicantJobApplicantionRequest) returns(google.protobuf.Empty);
}

message ApplicantJobApplicantionId
{
string Id=1;
}

message ApplicantJobApplicantionReply{
string Id=1;
string Applicant=2;
string Job=3;
google.protobuf.Timestamp ApplicationDate = 4;
bytes TimeStamp=5;
}


message ApplicantJobApplicantionRequest{
string Id=1;
string Applicant=2;
string Job=3;
google.protobuf.Timestamp ApplicationDate = 4;
}


message MultipleJobApplicantionRequest{
  repeated ApplicantJobApplicantionRequest Request=1;
}
